otro coso para mí bebe2.html

--- a/otro coso para mí bebe.html
+++ b/otro coso para mí bebe.html
@@ -49,7 +49,7 @@
     </h5>
 
     <h2>Aca con mi gordita</h2>
-    <img src="prueba/gordita.jpg" alt="Aca con mi gordita" width="150" height="100">
+    <img src="gordita.jpg" alt="Aca con mi gordita" width="150" height="100">
 
     <!-- Incrustar el video de YouTube con autoplay y silenciado -->
     <iframe id="videoMusica" src="https://www.youtube.com/embed/evr0DTiiRlo?autoplay=1&loop=1&playlist=evr0DTiiRlo&controls=0&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
